# weather-fargate

./: .dockerignore  Dockerfile  LICENSE  README.md  asgi.py  pyproject.toml  requirements.txt
weather/: server.py
